[package]
name = "bh1730fvc"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Robert Wiewel <dev@ducktec.de>"]
description = "A rust no-std driver for the BH1730FVC ambient light sensor."
keywords = ["bh1730fvc", "sensor", "i2c", "embedded", "no-std"]
categories = ["embedded", "no-std"]
readme = "README.md"
repository = "https://github.com/ducktec/bh1730fvc-rs"
documentation = "https://docs.rs/bh1730fvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
embedded-hal-async = "1.0.0"
log = { version = "0.4.20" }

[dev-dependencies]
embedded-hal-mock = "0.8"

[target.'cfg(all(target_arch = "arm"))'.dev-dependencies]
linux-embedded-hal = "0.2.2"

[features]
async = []
